--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ section{
 color: white;
 }
 .dark-theme .text--color{
-    color: #6a49f0;
+    color: #f92500;
 }
 .dark-theme section{
     background-color: #242424;
