--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ section{
 .title{
     font-size:120px;
     margin-bottom:12px;
-    text-align:left;
+    text-align:center;
     line-height:1;
     
 }
